Refactor AnalyticsController to use Collections.emptyList() for improved readability